updated French translation

--- a/po/wesnoth-did/fr.po
+++ b/po/wesnoth-did/fr.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-07 22:09+0200\n"
-"PO-Revision-Date: 2010-04-11 09:56+0100\n"
+"PO-Revision-Date: 2012-01-02 11:09+0100\n"
 "Last-Translator: Guigou Guillaume <guillaume.guigou@orange.fr>\n"
 "Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
 "Language: \n"
@@ -62,9 +62,8 @@ msgstr "Thaumaturge"
 
 #. [campaign]: id=Descent_into_Darkness
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:22
-#, fuzzy
 msgid "(Intermediate level, 12 scenarios.)"
-msgstr "(Niveau moyen, 11 scénarios.)"
+msgstr "(Niveau moyen, 12 scénarios.)"
 
 #. [campaign]: id=Descent_into_Darkness
 #: data/campaigns/Descent_Into_Darkness/_main.cfg:22
@@ -163,7 +162,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:49
-#, fuzzy
 msgid ""
 "Shortly a man dressed in the robes of a necromancer emerged from the trees. "
 "<i>“Allow me to introduce myself. I am Darken Volk. While I know your "
@@ -173,16 +171,15 @@ msgid ""
 "I ask only to rest in your town for a few days.”</i>"
 msgstr ""
 "Peu après, un homme vêtu des atours d'un nécromancien sortit des bois. "
-"« Permettez-moi de me présenter. Je suis Darken Volk. Même si je sais que "
+"<i>« Permettez-moi de me présenter. Je suis Darken Volk. Même si je sais que "
 "votre royaume n'aime pas les gens de mon espèce, je pense qu'il est vital de "
 "mettre nos différends de côté pour le moment. La menace orc grandit au nord, "
 "et je doute qu'une quelconque ville frontalière puisse résister sans un peu "
 "d'assistance. Pour le moment, je vous demande seulement de m'accorder "
-"quelques jours de repos dans votre ville. »"
+"quelques jours de repos dans votre ville. »</i>"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:54
-#, fuzzy
 msgid ""
 "Drogan, the captain of the guard, replied, <i>“Surely you know that the "
 "penalty for necromancy is death. For your aid we will promise you rest and "
@@ -190,11 +187,12 @@ msgid ""
 "to return on pain of death. We thank you for your help, but need no "
 "alliances with those who deal only in dark magic.”</i>"
 msgstr ""
-"Drogan, le capitaine de la garde, répondit : « Vous savez sûrement que nous "
-"punissons la nécromancie de la peine capitale. Pour votre aide, nous vous "
-"promettons repos et sécurité jusqu'à votre départ, mais vous serez exécuté "
-"si vous revenez. Nous vous remercions de votre proposition mais nous n'avons "
-"pas besoin de nous allier avec ceux qui pratiquent la magie des ténèbres. »"
+"Drogan, le capitaine de la garde, répondit : <i>« Vous savez sûrement que "
+"nous punissons la nécromancie de la peine capitale. Pour votre aide, nous "
+"vous promettons repos et sécurité jusqu'à votre départ, mais vous serez "
+"exécuté si vous revenez. Nous vous remercions de votre proposition mais nous "
+"n'avons pas besoin de nous allier avec ceux qui pratiquent la magie des "
+"ténèbres. »</i>"
 
 #. [side]: type=General, id=Taylor
 #. [side]: type=Apprentice Mage, id=Malin Keshar
@@ -290,7 +288,6 @@ msgstr "Mort de Drogan"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:186
-#, fuzzy
 msgid ""
 "Malin, troubled by his father’s death, argues to no avail that Darken Volk "
 "be allowed to stay to help defend the town. The necromancer leaves Parthyn "
@@ -367,7 +364,6 @@ msgstr ""
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:230
-#, fuzzy
 msgid ""
 "No! No... it was nothing like that... But I will not stand by and allow the "
 "orcs to destroy my home while I have the skills to prevent it!"
@@ -474,7 +470,6 @@ msgstr ""
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:350
-#, fuzzy
 msgid ""
 "Perhaps I cannot kill them all... but I see the back-trail of this band we "
 "defeated, and there will be more orcs at the other end of it. I shall pursue "
@@ -512,7 +507,6 @@ msgstr "J'y suis résolu."
 
 #. [message]: speaker=Drogan
 #: data/campaigns/Descent_Into_Darkness/scenarios/01_Saving_Parthyn.cfg:370
-#, fuzzy
 msgid ""
 "You’ll go without my blessing or my men, then. I won’t spare any on such an "
 "errand."
@@ -732,7 +726,6 @@ msgstr "Je le suppose..."
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/02_Peaceful_Valley.cfg:367
-#, fuzzy
 msgid ""
 "Sacking goblin villages is all well and good, but walking corpses and bats "
 "won’t stand up to full orcish warriors."
@@ -841,7 +834,6 @@ msgstr ""
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg:208
-#, fuzzy
 msgid ""
 "Two necromancers are at the cave entrance! Up yer axes, boys, if ye dinna’ "
 "want tae be a walking pile o’ bones."
@@ -898,7 +890,6 @@ msgstr ""
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/03_A_Haunting_in_Winter.cfg:257
-#, fuzzy
 msgid "But why are they attacking me? And what should I do?!"
 msgstr "Mais pourquoi est-ce qu'ils m'attaquent ? Et que dois-je faire ?"
 
@@ -1040,7 +1031,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg:28
-#, fuzzy
 msgid ""
 "Word spreads to the south as well, of the many battles won against the orc "
 "tribes, as Darken Volk tells Malin. As spring rolls around, a number of dark "
@@ -1051,9 +1041,9 @@ msgstr ""
 "La nouvelle des nombreuses victoires contre les tribus orcs se répand aussi "
 "dans le sud, comme Darken Volk l'apprend à Malin. Avec le passage du "
 "printemps, un certain nombre d'adeptes des ténèbres, désireux d'aider au "
-"combat, voyagent vers le nord et se joignent à eux. « Ils sont assez utiles "
-"dans une bataille, dit le nécromancien à Malin, mais aucun n'a ne serait-ce "
-"qu'un dixième de ton pouvoir potentiel. »"
+"combat, voyagent vers le nord et se joignent à eux. <i>« Ils sont assez "
+"utiles dans une bataille»</i> dit le nécromancien à Malin, <i>«mais aucun "
+"n'a ne serait-ce qu'un dixième de ton pouvoir potentiel. »</i>"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/05_Orc_War.cfg:33
@@ -1364,7 +1354,6 @@ msgstr ""
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg:347
-#, fuzzy
 msgid ""
 "Gods of Darkness, how did it come to this? My own sister determined on my "
 "death. Nothing has gone right since... since that day the fat toad Zephrin "
@@ -1375,9 +1364,9 @@ msgstr ""
 "Dieux des Ténèbres, comment en est-on arrivé là ? Ma propre sœur déterminée "
 "à me tuer. Rien ne va plus depuis... depuis ce jour où ce gros cochon de "
 "Zephrin s'est moqué de mon accent de plouc du nord et où j'ai perdu patience "
-"et l'ai maudit avec colère. « Une malédiction pour la vie, c'est trop pour "
-"une blague » dirent-ils. « Mauvais jugement » dirent-ils, et ils "
-"m'expulsèrent de l'Académie."
+"et l'ai maudit avec colère.<i> « Une malédiction pour la vie, c'est trop "
+"pour une blague »</i> dirent-ils. <i>« Mauvais jugement »</i> dirent-ils, et "
+"ils m'expulsèrent de l'Académie."
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/06_Return_to_Parthyn.cfg:351
@@ -1409,7 +1398,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:111
-#, fuzzy
 msgid ""
 "<i>“For your final test as my apprentice, you will aid me in retrieving a "
 "book,”</i> the necromancer says. <i>“The book was... stolen from me long "
@@ -1417,25 +1405,24 @@ msgid ""
 "I should warn you that it will require you to act against your countrymen of "
 "Wesnoth, since it was one of them who stole it from me.”</i>"
 msgstr ""
-"Le nécromancien lui dit : « Ton épreuve finale comme apprenti sera de "
-"m'aider à récupérer un livre qui me fut... volé il y a longtemps. Comme il a "
-"une valeur personnelle pour moi, vois ça comme une petite faveur. Je dois te "
-"prévenir que cela t'obligera à agir contre tes compatriotes de Wesnoth, "
-"puisque c'est l'un d'entre eux qui me l'a volé. »"
+"Le nécromancien lui dit : <i>« Ton épreuve finale comme apprenti sera de "
+"m'aider à récupérer un livre qui me fut... volé il y a longtemps.»</i>  "
+"<i>« Comme il a une valeur personnelle pour moi, vois ça comme une petite "
+"faveur. Je dois te prévenir que cela t'obligera à agir contre tes "
+"compatriotes de Wesnoth, puisque c'est l'un d'entre eux qui me l'a volé. »</"
+"i>"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:116
-#, fuzzy
 msgid ""
 "Malin replies, <i>“They are no longer countrymen of mine, since they have "
 "rejected me twice now.”</i>"
 msgstr ""
-"Malin répond : « Je n'ai plus de compatriotes, puisqu'ils m'ont rejeté deux "
-"fois maintenant. »"
+"Malin répond : <i>« Je n'ai plus de compatriotes, puisqu'ils m'ont rejeté "
+"deux fois maintenant. »</i>"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/07_A_Small_Favor.cfg:121
-#, fuzzy
 msgid ""
 "Darken Volk continues, <i>“Excellent. We travel, then, to the city of Tath. "
 "There is a lord of that city by the name of Karres. He was trained as a mage "
@@ -1443,11 +1430,12 @@ msgid ""
 "their studies. Among his library is the book we seek. We will need to break "
 "into his manor and seek the book inside.”</i>"
 msgstr ""
-"Darken Volk continue : « Excellent. Nous voyagerons donc vers la cité de "
+"Darken Volk continue : <i>« Excellent. Nous voyagerons donc vers la cité de "
 "Tath. Le seigneur de cette cité s'appelle Karres. Il a été entraîné comme "
 "mage dans sa jeunesse, et maintenant il utilise sa fortune pour financer un "
 "grand nombre d'étudiants en magie. Sa bibliothèque contient le livre que "
-"nous cherchons. Nous aurons besoin d'entrer dans son manoir par effraction. »"
+"nous cherchons. Nous aurons besoin d'entrer dans son manoir par "
+"effraction. »</i>"
 
 #. [side]: type=Apprentice Mage, id=Malin Keshar
 #. [side]
@@ -1606,7 +1594,6 @@ msgstr ""
 
 #. [message]: speaker=Malin Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/08_A_Small_Favor2.cfg:363
-#, fuzzy
 msgid ""
 "That gate won’t hold back the soldiers for more than a few hours. We’d "
 "better hurry."
@@ -1774,9 +1761,9 @@ msgstr ""
 
 #. [message]: speaker=Darken Volk
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:228
-#, fuzzy
 msgid "‘We’? <i>We</i> do nothing. You are no longer my apprentice."
-msgstr "Nous ? NOUS ne faisons rien. Désormais, tu n'es plus mon apprenti."
+msgstr ""
+"Nous ? <i>NOUS</i>  ne faisons rien. Désormais, tu n'es plus mon apprenti."
 
 #. [message]: speaker=Darken Volk
 #: data/campaigns/Descent_Into_Darkness/scenarios/10_Alone_at_Last.cfg:242
@@ -2001,13 +1988,11 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:18
-#, fuzzy
 msgid "<i>“To become a lich, one must first die.”</i>"
-msgstr "« Pour devenir une liche, il faut d'abord mourir. »"
+msgstr "<i>« Pour devenir une liche, il faut d'abord mourir. »</i>"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:23
-#, fuzzy
 msgid ""
 "So reads the book that Malin has reclaimed. <i>“The spells of necromancy "
 "bind the spirit, but only once it has been unbound from the body. To become "
@@ -2016,13 +2001,13 @@ msgid ""
 "the spirits of others. Because he retains his own will, however, the lich "
 "can call upon the awesome powers of the spirit world.”</i>"
 msgstr ""
-"Ainsi est-il écrit dans le livre que Malin a récupéré. « Les sortilèges de "
-"nécromancie lient l'esprit, mais seulement après avoir été séparé de son "
+"Ainsi est-il écrit dans le livre que Malin a récupéré. <i>« Les sortilèges "
+"de nécromancie lient l'esprit, mais seulement après avoir été séparé de son "
 "corps. Pour devenir une liche, le mage doit faire les incantations "
 "nécessaires avec le peu de souffle qui lui reste avant de mourir. Il lie son "
 "propre esprit comme on lie les autres esprits. Mais la liche conserve sa "
 "propre volonté et peut invoquer les terribles pouvoirs du monde des "
-"ténèbres. »"
+"ténèbres. »</i>"
 
 #. [part]
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:28
@@ -2162,7 +2147,7 @@ msgstr "Mal Keshar"
 #. [message]: speaker=Mal Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:417
 msgid "<big>AAAaaiiigghh!!</big>"
-msgstr ""
+msgstr "<big>AAAaaiiigghh!!</big>"
 
 #. [message]: speaker=Mal Keshar
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:422
@@ -2233,7 +2218,7 @@ msgstr ""
 #. [message]
 #: data/campaigns/Descent_Into_Darkness/scenarios/11_Descent_into_Darkness.cfg:677
 msgid "<big>AAAaaaggghhhh!! ...</big>"
-msgstr ""
+msgstr "<big>AAAaaaggghhhh!! ...</big>"
 
 #. [scenario]: id=12_Endless_Night
 #: data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg:6
@@ -2331,7 +2316,6 @@ msgstr ""
 
 #. [message]: speaker=Foolish Hero
 #: data/campaigns/Descent_Into_Darkness/scenarios/12_Endless_Night.cfg:328
-#, fuzzy
 msgid ""
 "I’ve been itching for a chance to break some bones with my hammer, and now "
 "you’ve given me cause. Goodness knows you’ve got plenty of bones over there."
