--- a/po/wesnoth-dm/fr.po
+++ b/po/wesnoth-dm/fr.po
@@ -6,8 +6,8 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-11-20 21:24+0200\n"
-"Last-Translator: Pascal Guillaume <guillaume.pascal43@laposte.net>\n"
+"PO-Revision-Date: 2012-01-02 14:09+0100\n"
+"Last-Translator: Guigou Guillaume <guillaume.guigou@orange.fr>\n"
 "Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -41,7 +41,6 @@ msgstr "Apprenti"
 
 #. [campaign]: id=Delfadors_Memoirs
 #: data/campaigns/Delfadors_Memoirs/_main.cfg:32
-#, fuzzy
 msgid "(Challenging)"
 msgstr "(Challenger)"
 
@@ -52,21 +51,18 @@ msgstr "Mage"
 
 #. [campaign]: id=Delfadors_Memoirs
 #: data/campaigns/Delfadors_Memoirs/_main.cfg:33
-#, fuzzy
 msgid "(Difficult)"
 msgstr "(Difficile)"
 
 #. [campaign]: id=Delfadors_Memoirs
 #: data/campaigns/Delfadors_Memoirs/_main.cfg:33
-#, fuzzy
 msgid "Great Mage"
 msgstr "Grand mage"
 
 #. [campaign]: id=Delfadors_Memoirs
 #: data/campaigns/Delfadors_Memoirs/_main.cfg:37
-#, fuzzy
 msgid "(Intermediate level, 19 scenarios.)"
-msgstr "(Niveau intermédiaire, 23 scénarios)"
+msgstr "(Niveau intermédiaire, 19 scénarios.)"
 
 #. [campaign]: id=Delfadors_Memoirs
 #: data/campaigns/Delfadors_Memoirs/_main.cfg:37
@@ -161,7 +157,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg:63
-#, fuzzy
 msgid ""
 "After ten years of training, two tests stand between that apprentice and "
 "attainment of the degree of Mage:"
@@ -171,18 +166,16 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg:66
-#, fuzzy
 msgid "<i>The New Mage Ceremony</i>"
 msgstr "<i>La Cérémonie du Nouveau Mage</i>"
 
 #. [part]
 #: data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg:69
 msgid "and"
-msgstr " et"
+msgstr "et"
 
 #. [part]
 #: data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg:72
-#, fuzzy
 msgid "<i>The Name Journey</i>"
 msgstr "<i>Le Voyage du Nom</i>"
 
@@ -198,9 +191,8 @@ msgstr "Académie de Magie, Île d'Alduin."
 #: data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg:137
 #: data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg:146
 #: data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg:155
-#, fuzzy
 msgid "... thorum restro targa thorum..."
-msgstr " ...thorum restro targa thorum... "
+msgstr "...thorum restro targa thorum..."
 
 #. [message]: speaker=Marshal
 #: data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg:102
@@ -223,7 +215,6 @@ msgstr ""
 
 #. [message]: speaker=Second Oracle
 #: data/campaigns/Delfadors_Memoirs/scenarios/01_Overture.cfg:133
-#, fuzzy
 msgid ""
 "You will not be least among those champions. Nay; you will be called <i>“The "
 "Great”</i> before your days are through. I give you the second syllable of "
@@ -630,7 +621,6 @@ msgstr ""
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/03_The_Road_to_Weldyn.cfg:190
-#, fuzzy
 msgid ""
 "You are welcome... But I am wondering what orcs were doing so deep inside "
 "the borders of Wesnoth."
@@ -698,7 +688,6 @@ msgstr ""
 
 #. [message]: speaker=Leollyn
 #: data/campaigns/Delfadors_Memoirs/scenarios/04_Leollyn.cfg:152
-#, fuzzy
 msgid ""
 "Hail, strangers on the road! I crave your aid; hurry, for we are sorely "
 "beset!"
@@ -719,13 +708,12 @@ msgstr ""
 
 #. [message]: speaker=Leollyn
 #: data/campaigns/Delfadors_Memoirs/scenarios/04_Leollyn.cfg:160
-#, fuzzy
 msgid ""
 "Then you have not heard...? —But there will be time enough for talking. If "
 "you can distract those vile creatures, I will try to organize a "
 "counterattack."
 msgstr ""
-"Alors tu n'es pas au courant... mais nous aurons le temps de discuter plus "
+"Alors tu n'es pas au courant... ? Mais nous aurons le temps de discuter plus "
 "tard. Si tu peux détourner l'attention de ces infâmes créatures, j'essaierai "
 "de mener une contre-attaque."
 
@@ -1000,7 +988,6 @@ msgstr "Si c'est ainsi que je servirai le mieux, je le ferai volontier."
 
 #. [message]: speaker=Leollyn
 #: data/campaigns/Delfadors_Memoirs/scenarios/05_Council_in_Weldyn.cfg:158
-#, fuzzy
 msgid ""
 "Then you shall! Lionel and his men will accompany you, for you will need "
 "more than magic for protection on the road... especially where you’ll be "
@@ -1056,7 +1043,6 @@ msgstr ""
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/06_Swamps_of_Illuven.cfg:123
-#, fuzzy
 msgid ""
 "... I insisted on the most direct possible route. I know; let us both hope "
 "the choice was not folly. Who made those villages in the swamps? Orcs?"
@@ -1099,7 +1085,6 @@ msgstr "Où est-il allé ?"
 
 #. [message]: speaker=Harold
 #: data/campaigns/Delfadors_Memoirs/scenarios/06_Swamps_of_Illuven.cfg:174
-#, fuzzy
 msgid "Haw haw haw! Fools!"
 msgstr "Ha ha ha ! Imbéciles !"
 
@@ -1148,7 +1133,6 @@ msgstr ""
 
 #. [objective]: condition=win
 #: data/campaigns/Delfadors_Memoirs/scenarios/07_Night_in_the_Swamp.cfg:100
-#, fuzzy
 msgid "Survive until daybreak."
 msgstr "Survivre jusqu'à l'aube."
 
@@ -1282,7 +1266,6 @@ msgstr ""
 
 #. [message]: speaker=Lionel
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:109
-#, fuzzy
 msgid ""
 "This Ur-Thorodor should not speak of King Garard that way! <i>“Suffer our "
 "wrath”</i> indeed... I’ll show him wrath!"
@@ -1422,9 +1405,8 @@ msgstr "Facile à vérifier... Cogne dessus et regarde s'il se réveille !"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Delfadors_Memoirs/scenarios/08_Ur_Thorodor.cfg:282
-#, fuzzy
 msgid "<i>Thump</i>!"
-msgstr "<i>Bruit sourd</i>!"
+msgstr "<i>Bruit lourd</i>!"
 
 #. [message]: speaker={STRING}
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:59
@@ -1538,7 +1520,6 @@ msgstr "Os"
 
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:331
-#, fuzzy
 msgid "Penella"
 msgstr "Penella"
 
@@ -1558,7 +1539,6 @@ msgstr ""
 
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:342
-#, fuzzy
 msgid "Roddry"
 msgstr "Roddry"
 
@@ -1587,7 +1567,6 @@ msgstr "Je suis mort il y a bien longtemps. J'ai oublié mon nom."
 
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:356
-#, fuzzy
 msgid "Melinna"
 msgstr "Melinna"
 
@@ -1622,7 +1601,6 @@ msgstr ""
 
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:371
-#, fuzzy
 msgid "Sythan"
 msgstr "Sythan"
 
@@ -1637,7 +1615,6 @@ msgstr ""
 
 #. [scenario]: id=09_Houses_of_the_Dead
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:378
-#, fuzzy
 msgid "Hereld"
 msgstr "Hereld"
 
@@ -1748,7 +1725,6 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: data/campaigns/Delfadors_Memoirs/scenarios/09_Houses_of_the_Undead.cfg:518
-#, fuzzy
 msgid ""
 "Living...? I see that it is so. Your breath stirs dust that has lain "
 "untouched since the Primal Aeon. And it was foretold that one like you would "
@@ -2481,7 +2457,6 @@ msgstr "Stanis"
 
 #. [message]: speaker=Donc
 #: data/campaigns/Delfadors_Memoirs/scenarios/12_Terror_at_the_Ford_of_Parthyn.cfg:725
-#, fuzzy
 msgid "It’s time to stand up and fight... What’s this?"
 msgstr ""
 "Il est temps de se redresser et de combattre... Qu'est-ce que c'est que ça ?"
@@ -2553,9 +2528,8 @@ msgstr "Longue vie au Roi ! Attendez, vous n'êtes pas..."
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/12_Terror_at_the_Ford_of_Parthyn.cfg:898
-#, fuzzy
 msgid "—The enemy? Yes, we’re on your side."
-msgstr "... L'ennemi ? Oui, nous sommes de votre côté."
+msgstr "- L'ennemi ? Oui, nous sommes de votre côté."
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/12_Terror_at_the_Ford_of_Parthyn.cfg:902
@@ -2682,7 +2656,6 @@ msgstr ""
 
 #. [message]: speaker=Chantal
 #: data/campaigns/Delfadors_Memoirs/scenarios/12_Terror_at_the_Ford_of_Parthyn.cfg:1185
-#, fuzzy
 msgid ""
 "Word had just arrived when I left Lintanir that the High Lord Kalenz was "
 "mustering an elvish army against the orcs, but he is not aware of the King’s "
@@ -2730,7 +2703,6 @@ msgstr ""
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/12_Terror_at_the_Ford_of_Parthyn.cfg:1202
-#, fuzzy
 msgid ""
 "My King does not command him... but if Elves and Humans do not stand "
 "together in this, I fear we will fall separately."
@@ -2771,13 +2743,11 @@ msgstr ""
 
 #. [scenario]: id=13_The_Return_of_Trouble
 #: data/campaigns/Delfadors_Memoirs/scenarios/13_The_Return_of_Trouble.cfg:4
-#, fuzzy
 msgid "The Return of Trouble"
-msgstr "Le retour des ennuis"
+msgstr "Le Retour des Ennuis"
 
 #. [part]
 #: data/campaigns/Delfadors_Memoirs/scenarios/13_The_Return_of_Trouble.cfg:17
-#, fuzzy
 msgid ""
 "While Delfador was still at the Academy, major events were taking place "
 "throughout Wesnoth. After centuries of squabbling, a warlord emerged to "
@@ -2793,7 +2763,6 @@ msgstr ""
 #. knights. It means he wandered around looking for monsters to
 #. slay and wrongs to right.
 #: data/campaigns/Delfadors_Memoirs/scenarios/13_The_Return_of_Trouble.cfg:23
-#, fuzzy
 msgid ""
 "There was an elf named Kalenz who had already in Delfador’s time been a "
 "legend among his people for centuries; his is the tale called <i>the Legend "
@@ -2810,7 +2779,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Delfadors_Memoirs/scenarios/13_The_Return_of_Trouble.cfg:26
-#, fuzzy
 msgid ""
 "But Kalenz half-knew and half-feared he would be needed again, and the day "
 "he had long foreseen finally arrived. Report came to him of large orcish "
@@ -2874,7 +2842,6 @@ msgstr ""
 
 #. [message]: id=Kalenz
 #: data/campaigns/Delfadors_Memoirs/scenarios/13_The_Return_of_Trouble.cfg:225
-#, fuzzy
 msgid ""
 "The orcs are retreating! And... what is this? A shyde flying towards us as "
 "if hell were on her heels..."
@@ -2884,7 +2851,6 @@ msgstr ""
 
 #. [message]: id=Kalenz
 #: data/campaigns/Delfadors_Memoirs/scenarios/13_The_Return_of_Trouble.cfg:231
-#, fuzzy
 msgid ""
 "The orcs are retreating! And... what is this? A druid running to meet us as "
 "though hell were on her heels..."
@@ -3180,7 +3146,6 @@ msgstr "Si j'étais humaine, je pense que je pourrais être amoureuse de lui."
 
 #. [message]: id=Kalenz
 #: data/campaigns/Delfadors_Memoirs/scenarios/14_Shadows.cfg:312
-#, fuzzy
 msgid ""
 "If you were human, you would be quite right to be. Strange... they are such "
 "surly children in the main, short-lived and crude and quarrelsome. And yet, "
@@ -3342,7 +3307,6 @@ msgstr ""
 
 #. [message]: id=Delfador
 #: data/campaigns/Delfadors_Memoirs/scenarios/15_Save_the_King.cfg:259
-#, fuzzy
 msgid "Agreed, but we must make haste, for the King is hard pressed."
 msgstr ""
 "D'accord, mais nous devons nous hâter, car le Roi est en mauvaise posture."
@@ -3631,7 +3595,6 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Delfadors_Memoirs/scenarios/16_Dark_Sky_Over_Weldyn.cfg:45
-#, fuzzy
 msgid ""
 "Your majesty, these are no stray undead; this lunatic, Iliah-Malal, has "
 "opened a portal to the Land of the Dead. Unless we close this portal soon, "
@@ -3647,8 +3610,8 @@ msgstr ""
 "noyer au sein d'un flot sans fin de morts-vivants. Et votre armée, équipée "
 "et entraînée tout d'abord pour combattre les raids orcs, n'est pas vraiment "
 "adaptée pour combattre ne serait-ce que les forces en présence aujourd'hui. "
-"Des mages, combinés à de l'infanterie lourde, constitueraient le ost le plus "
-"efficace pour leur faire face."
+"Des mages, combinés à de l'infanterie lourde, constitueraient la troupe la "
+"plus efficace pour leur faire face."
 
 #. [part]
 #: data/campaigns/Delfadors_Memoirs/scenarios/16_Dark_Sky_Over_Weldyn.cfg:49
@@ -3738,7 +3701,6 @@ msgstr "A vos ordres, sire !"
 
 #. [part]
 #: data/campaigns/Delfadors_Memoirs/scenarios/16_Dark_Sky_Over_Weldyn.cfg:90
-#, fuzzy
 msgid ""
 "And so it was that the Wesnothian army left Weldyn to seek out and crush "
 "Iliah-Malal’s forces. But the campaign proved a disaster. Less than a "
@@ -3852,7 +3814,6 @@ msgstr "Un Nouvel Allié"
 
 #. [part]
 #: data/campaigns/Delfadors_Memoirs/scenarios/17_A_New_Ally.cfg:23
-#, fuzzy
 msgid ""
 "Delfador took a small escort to the north in order to attempt to close the "
 "portal. But with Iliah-Malal’s army at large north of the Great River, this "
@@ -3949,7 +3910,6 @@ msgstr "Nous avons une dette envers vous."
 
 #. [message]: speaker=Ulrek
 #: data/campaigns/Delfadors_Memoirs/scenarios/17_A_New_Ally.cfg:205
-#, fuzzy
 msgid ""
 "Human, ye ha’ fought well. I am Ulrek, chieftain o’ the clan of Norlund. My "
 "house is in yer debt today. But who are ye and what do ye do in these lands?"
@@ -4298,7 +4258,6 @@ msgstr ""
 
 #. [message]: speaker=Iliah-Malal
 #: data/campaigns/Delfadors_Memoirs/scenarios/19_Showdown_in_the_Northern_Swamp.cfg:212
-#, fuzzy
 msgid ""
 "Is he not amusing, my creatures? He puffs himself up as though he were "
 "Delfador the Mighty, Delfador the Powerful, Delfador the Great... rather "
@@ -4319,7 +4278,6 @@ msgstr ""
 
 #. [message]: speaker=Iliah-Malal
 #: data/campaigns/Delfadors_Memoirs/scenarios/19_Showdown_in_the_Northern_Swamp.cfg:220
-#, fuzzy
 msgid ""
 "Oracles? What nonsense you babble... After you die, I will raise your corpse "
 "and compel you to tell me how to reopen my portal!"
@@ -5029,7 +4987,6 @@ msgstr ""
 #. [terrain_type]: id=milestone2
 #: data/campaigns/Delfadors_Memoirs/terrain.cfg:16
 #: data/campaigns/Delfadors_Memoirs/terrain.cfg:25
-#, fuzzy
 msgid "Milestone"
 msgstr "Borne"
 
@@ -5040,7 +4997,6 @@ msgstr "Compagnon mage"
 
 #. [unit_type]: id=Journeyman Mage
 #: data/campaigns/Delfadors_Memoirs/units/Journeyman_Mage.cfg:13
-#, fuzzy
 msgid ""
 "A mage who has just finished his apprenticeship is known as a journeyman. "
 "Journeyman mages travel far in search of employment and experience."
