--- a/po/wesnoth-thot/fr.po
+++ b/po/wesnoth-thot/fr.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.4.2+svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-08-29 17:50+0200\n"
-"Last-Translator: Pascal Guillaume <guillaume.pascal43@laposte.net>\n"
+"PO-Revision-Date: 2012-01-02 11:30+0100\n"
+"Last-Translator: Guigou Guillaume <guillaume.guigou@orange.fr>\n"
 "Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -59,7 +59,7 @@ msgstr "Seigneur"
 #. [campaign]: id=The_Hammer_of_Thursagan
 #: data/campaigns/The_Hammer_of_Thursagan/_main.cfg:23
 msgid "(Intermediate level, 11 scenarios.)"
-msgstr "(Niveau intermédiaire, 11 scénarios)."
+msgstr "(Niveau intermédiaire, 11 scénarios.)"
 
 #. [campaign]: id=The_Hammer_of_Thursagan
 #: data/campaigns/The_Hammer_of_Thursagan/_main.cfg:23
@@ -2608,7 +2608,6 @@ msgstr ""
 "comme sacrés et servent souvent d'émissaires entre clans."
 
 #: data/campaigns/The_Hammer_of_Thursagan/utils/abilities.cfg:4
-#, fuzzy
 msgid ""
 " The presence of this unit inspires own units next to it to deal more damage "
 "in combat, though this only applies to units of lower or equal level."
