--- a/po/wesnoth-tsg/fr.po
+++ b/po/wesnoth-tsg/fr.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-16 12:43+0100\n"
-"PO-Revision-Date: 2011-11-13 17:40+0100\n"
-"Last-Translator: Pascal Guillaume <guillaume.pascal43@laposte.net>\n"
+"PO-Revision-Date: 2012-01-03 13:46+0100\n"
+"Last-Translator: Guigou Guillaume <guillaume.guigou@orange.fr>\n"
 "Language-Team: Équipe de traduction française <wesnoth@ml.free.fr>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -26,7 +26,6 @@ msgstr "LGS"
 
 #. [campaign]: id=The_South_Guard
 #: data/campaigns/The_South_Guard/_main.cfg:19
-#, fuzzy
 msgid "(Novice level, 9 scenarios.)"
 msgstr "(Niveau débutant, 9 scénarios.)"
 
@@ -47,7 +46,7 @@ msgstr ""
 #. [campaign]: id=The_South_Guard
 #: data/campaigns/The_South_Guard/_main.cfg:22
 msgid "(Beginner)"
-msgstr "(débutant)"
+msgstr "(Débutant)"
 
 #. [campaign]: id=The_South_Guard
 #: data/campaigns/The_South_Guard/_main.cfg:22
@@ -57,7 +56,7 @@ msgstr "Civil"
 #. [campaign]: id=The_South_Guard
 #: data/campaigns/The_South_Guard/_main.cfg:23
 msgid "(Easy)"
-msgstr "(facile)"
+msgstr "(Facile)"
 
 #. [campaign]: id=The_South_Guard
 #: data/campaigns/The_South_Guard/_main.cfg:23
@@ -67,7 +66,7 @@ msgstr "Recrue"
 #. [campaign]: id=The_South_Guard
 #: data/campaigns/The_South_Guard/_main.cfg:24
 msgid "(Normal)"
-msgstr "(normal)"
+msgstr "(Normal)"
 
 #. [campaign]: id=The_South_Guard
 #: data/campaigns/The_South_Guard/_main.cfg:24
@@ -2220,7 +2219,6 @@ msgstr "Déplacer Seigneur Gerrick à l'orée nord des bois."
 
 #. [note]
 #: data/campaigns/The_South_Guard/scenarios/06a_Tidings_Good_and_Ill.cfg:229
-#, fuzzy
 msgid "Unrecalled units will be available for Deoran."
 msgstr "Les unités non rappelées seront disponibles pour Deoran."
 
@@ -3820,7 +3818,6 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: data/campaigns/The_South_Guard/utils/sg_help.cfg:110
-#, fuzzy
 msgid ""
 "Skeletons are the bones of fallen warriors raised by some dark magic. They "
 "are almost immune to piercing weapons like arrows and spears. Bladed attacks "
