updated Norwegian translation

--- a/po/wesnoth-httt/nb_NO.po
+++ b/po/wesnoth-httt/nb_NO.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.1.2-SVN\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-12-15 10:39+0100\n"
-"PO-Revision-Date: 2012-01-01 21:53+0100\n"
+"PO-Revision-Date: 2012-01-05 22:31+0100\n"
 "Last-Translator: Bjørn Håvard Stokke <bjoennungen@yahoo.no>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -492,7 +492,7 @@ msgstr "Å nei! Vi har gått tom for tid, de har fått forsterkninger..."
 #. [message]: speaker=second_unit
 #: data/campaigns/Heir_To_The_Throne/scenarios/01_The_Elves_Besieged.cfg:428
 msgid "Die, villain, die!"
-msgstr "Dø¸ slyngel, dø!"
+msgstr "Dø, slyngel, dø!"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Heir_To_The_Throne/scenarios/01_The_Elves_Besieged.cfg:439
@@ -532,7 +532,7 @@ msgstr "Vi kan ikke se oss tilbake. Vi må dra snart avgårde!"
 #. [scenario]: id=02_Blackwater_Port
 #: data/campaigns/Heir_To_The_Throne/scenarios/02_Blackwater_Port.cfg:4
 msgid "scenario name^Blackwater Port"
-msgstr "scenario name^Svartvann Havn"
+msgstr "Svartvann Havn"
 
 #. [objective]: condition=win
 #: data/campaigns/Heir_To_The_Throne/scenarios/02_Blackwater_Port.cfg:18
@@ -4789,27 +4789,24 @@ msgstr ""
 
 #. [part]
 #: data/campaigns/Heir_To_The_Throne/scenarios/17_Scepter_of_Fire.cfg:20
-#, fuzzy
 msgid ""
 "Distant rumbles and earthquakes made it difficult to keep steady footing. "
 "The very earth had come alive, heaving, struggling to be relieved of its "
 "centuries-old burden..."
 msgstr ""
-"Buldringen fra fjerne jordskjelv gjorde det vanskelig å holde seg stødig på  "
-"bena. Det var som om jorden selv var blitt levende, klar til å bli fri fra "
-"sin århundre-gamle byrde..."
+"Buldringen fra fjerne jordskjelv gjorde det vanskelig å holde seg stødig på "
+"bena. Det var som om jorden selv var blitt levende, duvende, i et forsøk på "
+"å fri seg fra sin århundre-gamle byrde..."
 
 #. [objective]: condition=win
 #: data/campaigns/Heir_To_The_Throne/scenarios/17_Scepter_of_Fire.cfg:62
-#, fuzzy
 msgid "Capture the Sceptre of Fire with Konrad or Li’sar"
 msgstr "Grip Ildscepteret med Konrad eller Li'sar"
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/17_Scepter_of_Fire.cfg:160
-#, fuzzy
 msgid "The Sceptre must be getting close now! Where shall we go?"
-msgstr "Ildscepteret må være nær nå! HVor skal vi gå?"
+msgstr "Scepteret må være nær nå! Hvor skal vi gå?"
 
 #. [message]: speaker=Kalenz
 #: data/campaigns/Heir_To_The_Throne/scenarios/17_Scepter_of_Fire.cfg:164
@@ -4834,7 +4831,6 @@ msgstr "Et jordskjelv! Vi blir fanget!"
 
 #. [message]: speaker=Kalenz
 #: data/campaigns/Heir_To_The_Throne/scenarios/17_Scepter_of_Fire.cfg:178
-#, fuzzy
 msgid ""
 "No, not an earthquake, Princess. I feel it too. Something is... aware... of "
 "us."
@@ -4849,7 +4845,6 @@ msgstr "Føle oss? Hvem? Delfador, hva mener han?"
 
 #. [message]: speaker=Delfador
 #: data/campaigns/Heir_To_The_Throne/scenarios/17_Scepter_of_Fire.cfg:186
-#, fuzzy
 msgid ""
 "The Sceptre... the earth... the molten lava... the fire... the air around "
 "us... everything. It calls out to the heir — I can barely hold it back in my "
@@ -4858,7 +4853,7 @@ msgid ""
 msgstr ""
 "Scepteret... jorden... lavasmelten... ilden... luften omkring oss... alt "
 "her. Det roper etter arvingen - jeg kan knapt nok fatte det. Det ble smidd "
-"her, ikke langt fra hvor vi står. Kraften som stråler herfra!"
+"her, ikke langt fra hvor vi står nå. Kraften som stråler herfra!"
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/17_Scepter_of_Fire.cfg:191
@@ -4887,19 +4882,17 @@ msgstr "Et Valg må Gjøres"
 
 #. [part]
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:16
-#, fuzzy
 msgid ""
 "The Sceptre, initially dulled from decades of dust and debris, began to glow "
 "from the ruby’s inner fire. Dwarvish runes on the golden handle lit up in "
 "pulsating blue. The heat and light were comforting in the pitch-black."
 msgstr ""
-"Scepteret, lenge matt av tiårs støv og skitt, begynte å gløde fra rubinens "
-"indre ild. Dvergiske runer på det gyldne håndtaket lyste med en behagelig "
+"Scepteret, matt av tiårs støv og skitt, begynte å gløde fra rubinens indre "
+"ild. Dvergiske runer på det gyldne håndtaket lyste opp i en pulserende "
 "blåtone. Heten og lyset var kjærkomne i det isnende stupmørket."
 
 #. [part]
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:21
-#, fuzzy
 msgid ""
 "An early encounter with the Sceptre in the hands of its new owners left "
 "several trolls as smoking husks. Sensing the awakening of a powerful magic, "
@@ -4934,7 +4927,6 @@ msgstr "Unan-Ka’tall"
 
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:176
-#, fuzzy
 msgid ""
 "I thank you for helping me get back to the surface, but now I must take what "
 "is mine!"
@@ -4974,12 +4966,11 @@ msgstr ""
 
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:196
-#, fuzzy
 msgid ""
 "Perhaps it is in both our best interests for us to remain allies for a "
 "little longer... but I do want that Sceptre, and someday I will have it!"
 msgstr ""
-"Kanskje det er i vår felles interesse å forbli allierte en stund til. But "
+"Kanskje det er i vår felles interesse å forbli allierte en stund til. Men "
 "jeg vil ha Scepteret, og en dag vil jeg ta det!"
 
 #. [message]: speaker=Konrad
@@ -4989,13 +4980,11 @@ msgstr "Da må vi legge en slagplan."
 
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:208
-#, fuzzy
 msgid "We have escaped."
 msgstr "Vel, vi unnslapp."
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:212
-#, fuzzy
 msgid ""
 "Yes, we have. Now I suppose you want to use the Sceptre against me, Princess?"
 msgstr ""
@@ -5004,7 +4993,6 @@ msgstr ""
 
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:216
-#, fuzzy
 msgid ""
 "No, I was thinking... I don’t really want to kill you. I have what I came to "
 "get. So if you promise never to come south of the Great River, I will spare "
@@ -5016,7 +5004,6 @@ msgstr ""
 
 #. [message]: speaker=Kalenz
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:220
-#, fuzzy
 msgid ""
 "With all due respect, Princess, it is once again we who will spare you, "
 "Sceptre or no Sceptre."
@@ -5065,7 +5052,6 @@ msgstr ""
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/18_A_Choice_Must_Be_Made.cfg:244
-#, fuzzy
 msgid ""
 "Then perhaps we should head east along the river, and seek refuge and rest "
 "there for a time?"
@@ -5314,7 +5300,6 @@ msgstr "Hvem ville ringeakte slik en underfull gjenstand?"
 
 #. [message]: speaker=Kalenz
 #: data/campaigns/Heir_To_The_Throne/scenarios/19a_Snow_Plains.cfg:126
-#, fuzzy
 msgid ""
 "I believe it belonged to Ila’alion, a mighty Marshal of the Wood. It was "
 "enchanted as a boon to him by your elvish friends in the south. He was "
@@ -5322,9 +5307,9 @@ msgid ""
 "vanquish some beast or other."
 msgstr ""
 "Jeg tror det har tilhørt Ila'alion, en mektig marskalk fra skogene. De "
-"alviske vennene dine sørfra fortrollet som en gave til ham. Han besøkte "
+"alviske vennene dine sørfra fortrollet det som en gave til ham. Han besøkte "
 "hjemmene deres som utsending fra oss nordalver og ble utpekt til å utrydde "
-"et eller annet slags vondt udyr."
+"et eller annet slags ondt udyr."
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/19a_Snow_Plains.cfg:130
@@ -5358,10 +5343,9 @@ msgstr ""
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/19a_Snow_Plains.cfg:142
 #: data/campaigns/Heir_To_The_Throne/scenarios/19b_Swamp_Of_Dread.cfg:349
-#, fuzzy
 msgid "He was just someone who couldn’t handle the power given to him."
 msgstr ""
-"Han var en bland mange som ikke kunne takle de gaver og evner som ble gitt "
+"Han var en blant mange som ikke kunne takle de gaver og evner som ble gitt "
 "ham."
 
 #. [message]: speaker=Kalenz
@@ -5372,7 +5356,6 @@ msgstr "Du bør heller se å lære den leksen han sprang over."
 
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/19a_Snow_Plains.cfg:150
-#, fuzzy
 msgid ""
 "Move along, elf, unless you enjoy making camp in this icy waste. I, for one, "
 "do not!"
@@ -5388,7 +5371,6 @@ msgstr "Sannelig..."
 
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/19a_Snow_Plains.cfg:158
-#, fuzzy
 msgid ""
 "Listen, you whose eyes are fair but hide a vacuum, do you think I do not "
 "know what power can do to one’s soul? What evils a person is capable of when "
@@ -5397,8 +5379,8 @@ msgid ""
 msgstr ""
 "Hør godt etter, du hvis øyne nok er fagre, men skjuler et tomrom bak seg. "
 "Tror du ikke jeg vet hva makt og posisjon gjør med ens sjel? Eller hvilke "
-"onde dåder en person kan utføre der sannhet og rettferd bare er vakre ord på "
-"dronningers falske bannbuller?"
+"onde dåder en person kan utføre når sannhet og rettferd ikke er annet enn "
+"vakre ord på falske bannruller, som dronningen kan omskrive når hun går lei?"
 
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/19a_Snow_Plains.cfg:162
@@ -5471,9 +5453,8 @@ msgstr "Bekjemp Heksekongen Aimucasur"
 
 #. [objective]: condition=win
 #: data/campaigns/Heir_To_The_Throne/scenarios/19b_Swamp_Of_Dread.cfg:26
-#, fuzzy
 msgid "Defeat all Death Knights first"
-msgstr "Bekjemp Dødsrytterne (Bonus)"
+msgstr "Bekjemp Dødsrytterne først"
 
 #. [side]: type=Death Knight, id=Clarustus
 #: data/campaigns/Heir_To_The_Throne/scenarios/19b_Swamp_Of_Dread.cfg:92
@@ -5570,19 +5551,17 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: data/campaigns/Heir_To_The_Throne/scenarios/19b_Swamp_Of_Dread.cfg:275
-#, fuzzy
 msgid ""
 "As the last of its generals falls, an ear-splitting screech escapes from the "
 "lich. It is clear that controlling such powerful spirits has drained it "
 "significantly, and it is seething in anger towards you."
 msgstr ""
-"Som den siste dødsrytteren faller, utstøter heskemesteren et skjærende "
-"skrik. Det er klart at kontrollen over slike egenrådige ånder har tappet ham "
+"Da den siste dødsrytteren faller, utstøter heskemesteren et skjærende skrik. "
+"Det er klart at kontrollen over slike egenrådige ånder har tappet ham helt "
 "for krefter, og han er ytterst rasende på deg."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Heir_To_The_Throne/scenarios/19b_Swamp_Of_Dread.cfg:315
-#, fuzzy
 msgid ""
 "A final blow destroys the lich, releasing a small shock wave of energy "
 "outwards. The last of his minions silently falls like a puppet with its "
@@ -5590,9 +5569,10 @@ msgid ""
 "once-mortal body disintegrate for the last time."
 msgstr ""
 "Et siste støt gjør ende på heksemesteren, hvorpå en sjokkbølge av energi "
-"utløses i alle retninger. Dødsridderne faller stille til jorden, avsjelede. "
-"En diger støvsky er den eneste levning etter heksekongens engang-dødelige "
-"legeme, da århundrers oppspart skitt og jammer spilles ut en siste gang."
+"utløses i alle retninger. Dødsridderne faller stille til jorden, avsjelet "
+"som en marionette får kappet sine tråder. En diger støvsky er den eneste "
+"levning etter heksekongens engang-dødelige legeme, da århundrers oppspart "
+"skitt og jammer spilles ut en siste gang."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Heir_To_The_Throne/scenarios/19b_Swamp_Of_Dread.cfg:322
